// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-preset-amex allows options to be passed to plugins 1`] = `
Object {
  "plugins": Array [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "presets": Array [
    Array [
      Object {
        "default": [Function],
        "getModulesPluginNames": [Function],
        "getPolyfillPlugins": [Function],
        "isPluginRequired": [Function],
        "transformIncludesAndExcludes": [Function],
      },
      Object {
        "exclude": Array [
          "@babel/plugin-transform-regenerator",
        ],
        "targets": Object {
          "browsers": Array [
            "last 2 versions",
            "not dead",
          ],
          "node": "12.16.1",
        },
      },
    ],
    Array [
      Object {
        "default": [Function],
      },
      Object {},
    ],
  ],
}
`;

exports[`babel-preset-amex returns modern preset for env and option 1`] = `
Object {
  "plugins": Array [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "presets": Array [
    Array [
      Object {
        "default": [Function],
        "getModulesPluginNames": [Function],
        "getPolyfillPlugins": [Function],
        "isPluginRequired": [Function],
        "transformIncludesAndExcludes": [Function],
      },
      Object {
        "targets": Object {
          "browsers": Array [
            "last 2 Chrome versions",
            "last 2 ChromeAndroid versions",
            "last 2 Edge versions",
            "last 2 Firefox versions",
            "last 2 iOS versions",
            "last 2 Safari versions",
          ],
          "node": "12.16.1",
        },
      },
    ],
    Array [
      Object {
        "default": [Function],
      },
      Object {},
    ],
  ],
}
`;

exports[`babel-preset-amex returns modern preset for env and option 2`] = `
Object {
  "plugins": Array [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "presets": Array [
    Array [
      Object {
        "default": [Function],
        "getModulesPluginNames": [Function],
        "getPolyfillPlugins": [Function],
        "isPluginRequired": [Function],
        "transformIncludesAndExcludes": [Function],
      },
      Object {
        "targets": Object {
          "browsers": Array [
            "last 2 Chrome versions",
            "last 2 ChromeAndroid versions",
            "last 2 Edge versions",
            "last 2 Firefox versions",
            "last 2 iOS versions",
            "last 2 Safari versions",
          ],
          "node": "12.16.1",
        },
      },
    ],
    Array [
      Object {
        "default": [Function],
      },
      Object {},
    ],
  ],
}
`;

exports[`babel-preset-amex returns server only config when given serverOnly option 1`] = `
Object {
  "plugins": Array [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "presets": Array [
    Array [
      Object {
        "default": [Function],
        "getModulesPluginNames": [Function],
        "getPolyfillPlugins": [Function],
        "isPluginRequired": [Function],
        "transformIncludesAndExcludes": [Function],
      },
      Object {
        "targets": Object {
          "node": "12.16.1",
        },
      },
    ],
    Array [
      Object {
        "default": [Function],
      },
      Object {},
    ],
  ],
}
`;

exports[`babel-preset-amex returns server only config when given serverOnly option 2`] = `
Object {
  "plugins": Array [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "presets": Array [
    Array [
      Object {
        "default": [Function],
        "getModulesPluginNames": [Function],
        "getPolyfillPlugins": [Function],
        "isPluginRequired": [Function],
        "transformIncludesAndExcludes": [Function],
      },
      Object {
        "targets": Object {
          "node": "12.16.1",
        },
      },
    ],
    Array [
      Object {
        "default": [Function],
      },
      Object {},
    ],
  ],
}
`;
